--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
                         <div class="promo__header">
                             <h1 class="promo__title">Аналитика телеграм-канала</h1>
                             <p class="promo__caption">
-                                Помогает видеть результаты работы и точнее понимать интересы аудитории
+                                Помогает видеть результаты работы иnbsp&;точнее понимать интересы аудитории
                             </p>
                         </div>
                         <div class="promo__main">
                             <figure class="promo__option promo__option--diagram">
                                 <img src="img/diagram.svg" width="123px" height="28px"
                                     alt="Пример диаграммы оценки популярности канала и вовлеченности аудитории">
-                                <figcaption>Оценивайте интерес и вовлечённость аудитории на графиках</figcaption>
+                                <figcaption>Оценивайте интерес иnbsp&;вовлечённость аудитории наnbsp&;графиках</figcaption>
                             </figure>
                             <figure class="promo__option promo__option--points">
                                 <img src="img/points.svg" width="90px" height="28px"
                                     alt="Схематичное изображение возможных символов пунктов лучших тем и форматов телеграм-канала">
-                                <figcaption>Смотрите, какие темы и форматы наиболее интересны  читателям</figcaption>
+                                <figcaption>Смотрите, какие темы иnbsp&;форматы наиболее интересны читателям</figcaption>
                             </figure>
                             <a class="promo__picture" href="https://t.me/staticbaddybot">
                                 <img src="img/app.png" width="320px" height="664px" alt="Скриншот с примером отчёт от бота Statisfire за неделю">
