--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <div class="promo__header">
                             <h1 class="promo__title">Аналитика телеграм-канала</h1>
                             <p class="promo__caption">
-                                Помогает видеть результаты работы иnbsp&;точнее понимать интересы аудитории
+                                Помогает видеть результаты работы и&nbsp;точнее понимать интересы аудитории
                             </p>
                         </div>
                         <div class="promo__main">
