--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <figure class="promo__option promo__option--diagram">
                                 <img src="img/diagram.svg" width="123px" height="28px"
                                     alt="Пример диаграммы оценки популярности канала и вовлеченности аудитории">
-                                <figcaption>Оценивайте на&nbps;графиках вовлечённость аудитории</figcaption>
+                                <figcaption>Оценивайте на&nbsp;графиках вовлечённость аудитории</figcaption>
                             </figure>
                             <figure class="promo__option promo__option--points">
                                 <img src="img/points.svg" width="90px" height="28px"
