--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page" style="display:none">
+<body class="page">
     <div class="page-wrapper">
         <header class="page-header">
             <div class="container">
@@ -70,11 +70,5 @@
             </div>
         </footer>
     </div>
-    <script>
-    function renderBody() {
-        document.body.style = 'display:block';
-    }
-    setTimeout(renderBody, 1000);
-    </script>
 </body>
 </html>
