--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <link rel="stylesheet" href="vendor/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="page" style="visibility: hidden;">
+<body class="page" style="visibility:hidden;">
+    <div class="fontChecker js__fontChecker" data-min-width="280" data-max-width="285" style="font-family:Unbounded;"></div>
     <div class="page-wrapper">
         <header class="page-header">
             <div class="container">
@@ -70,18 +71,10 @@
             </div>
         </footer>
     </div>
-    <script>
-    // Helper function
-    let domReady = (cb) => {
-      document.readyState === 'interactive' || document.readyState === 'complete'
-        ? cb()
-        : document.addEventListener('DOMContentLoaded', cb);
-    };
-
-    domReady(() => {
-      // Display body when DOM is loaded
-      document.body.style.visibility = 'visible';
-    });
-  </script>
+    <script
+        src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+        crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
