--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
                             <figure class="promo__option promo__option--diagram">
                                 <img src="img/diagram.svg" width="123px" height="28px"
                                     alt="Пример диаграммы оценки популярности канала и вовлеченности аудитории">
-                                <figcaption>Оценивайте вовлечённость аудитории за&nbsp;последнюю неделю</figcaption>
+                                <figcaption>Оценивайте вовлечённость аудитории за&nbsp;неделю</figcaption>
                             </figure>
                             <figure class="promo__option promo__option--points">
                                 <img src="img/points.svg" width="90px" height="28px"
                                     alt="Схематичное изображение возможных символов пунктов лучших тем и форматов телеграм-канала">
-                                <figcaption>Смотрите, какие темы и&nbsp;форматы наиболее интересны читателям</figcaption>
+                                <figcaption>Смотрите, какие темы и&nbsp;форматы интересны читателям</figcaption>
                             </figure>
                             <a class="promo__picture" href="https://t.me/staticbaddybot">
                                 <img src="img/app.png" width="320px" height="664px" alt="Скриншот с примером отчёт от бота Statisfire за неделю">
@@ -66,7 +66,7 @@
                     <p class="page-footer__copyrights">
                         &copy;&nbsp;Статисфаер,&nbsp;2024
                     </p>
-                    <a class="page-footer__link" href="https://bureau.ru/school/designers/">Сделано в Школе Бюро Горбунова</a>
+                    <a class="page-footer__link" href="https://bureau.ru/school/?utm_source=statisfire">Сделано в Школе Бюро Горбунова</a>
                 </div>
             </div>
         </footer>
