--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
                                     alt="Схематичное изображение возможных символов пунктов лучших тем и форматов телеграм-канала">
                                 <figcaption>Смотрите, какие темы и&nbsp;форматы интересны читателям</figcaption>
                             </figure>
-                            <a class="promo__picture" href="https://t.me/staticbaddybot">
+                            <a class="promo__picture" href="https://t.me/statisfire_bot">
                                 <img src="img/app.png" width="320px" height="664px" alt="Скриншот с примером отчёт от бота Statisfire за неделю">
                             </a>
                         </div>
                         <div class="promo__footer">
-                            <a class="promo__btn btn btn--default" href="https://t.me/staticbaddybot">Попробовать бесплатно</a>
+                            <a class="promo__btn btn btn--default" href="https://t.me/statisfire_bot">Попробовать бесплатно</a>
                         </div>
                     </div>
                 </div>
