--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     <p class="page-footer__copyrights">
                         &copy;&nbsp;Статисфаер,&nbsp;2024
                     </p>
-                    <a class="page-footer__link" href="https://bureau.ru/school/?utm_source=statisfire">Сделано в Школе Бюро Горбунова</a>
+                    <a class="page-footer__link" href="https://bureau.ru/school/?utm_source=statisfire-p-sc-all">Сделано в Школе Бюро Горбунова</a>
                 </div>
             </div>
         </footer>
