--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <div class="promo__header">
                             <h1 class="promo__title">Аналитика телеграм-канала</h1>
                             <p class="promo__caption">
-                                Помогает понять интересы подписчиков и&nbsp;прокачать канал.
+                                Помогает понять интересы подписчиков и&nbsp;прокачать канал благодаря отчётам раз&nbsp;в&nbsp;неделю.
                             </p>
                         </div>
                         <div class="promo__main">
