--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="promo__header">
                             <h1 class="promo__title">Аналитика телеграм-канала</h1>
                             <p class="promo__caption">
-                                Помогает понять интересы подписчиков и&nbsp;прокачать канал — отчёты раз&nbsp;в&nbsp;неделю.
+                                Помогает понять интересы подписчиков и&nbsp;прокачать канал –– отчёты раз&nbsp;в&nbsp;неделю.
                             </p>
                         </div>
                         <div class="promo__main">
