--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <img src="img/logo.svg" alt="Логотип Statisfire" width="28px" height="28px">
                         Statisfire
                     </a>
-                    <a class="main-nav__link" href="https://t.me/statisfire">Телеграм-канал</a>
+                    <a class="main-nav__link" href="https://t.me/statisfire_channel">Телеграм-канал</a>
                 </nav>
             </div>
         </header>
