--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                             <figure class="promo__option promo__option--diagram">
                                 <img src="img/diagram.svg" width="123px" height="28px"
                                     alt="Пример диаграммы оценки популярности канала и вовлеченности аудитории">
-                                <figcaption>Оценивайте вовлечённость аудитории за&nbsp;неделю 100&#8239;000</figcaption>
+                                <figcaption>Оценивайте вовлечённость аудитории за&nbsp;неделю</figcaption>
                             </figure>
                             <figure class="promo__option promo__option--points">
                                 <img src="img/points.svg" width="90px" height="28px"
